--- a/package.json
+++ b/package.json
@@ -8,13 +8,17 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "run": "cd src && node index.js",
+    "test": "jest"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.19",
+    "jest": "^29.7.0",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3",
-    "vite": "^5.2.8"
+    "vite": "^5.2.8",
+    "supertest": "^6.3.4"
   },
   "dependencies": {
     "preline": "^2.1.0",
