--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "autoprefixer": "^10.4.19",
     "jest": "^29.7.0",
     "postcss": "^8.4.38",
+    "supertest": "^6.3.4",
     "tailwindcss": "^3.4.3",
-    "vite": "^5.2.8",
-    "supertest": "^6.3.4"
+    "vite": "^5.2.8"
   },
   "dependencies": {
     "preline": "^2.1.0",
