--- a/package.json
+++ b/package.json
@@ -10,15 +10,21 @@
     "build": "vite build",
     "preview": "vite preview",
     "run": "cd src && node index.js",
-    "test": "jest"
+    "test": "playwright test",
+    "test:coverage": "nyc --reporter=json-summary --reporter=text playwright test"
   },
   "devDependencies": {
+    "@playwright/test": "^1.47.2",
+    "@types/node": "^22.7.4",
     "autoprefixer": "^10.4.19",
     "jest": "^29.7.0",
+    "nyc": "^17.1.0",
+    "playwright-test-coverage": "^1.2.12",
     "postcss": "^8.4.38",
     "supertest": "^6.3.4",
     "tailwindcss": "^3.4.3",
-    "vite": "^5.2.8"
+    "vite": "^5.2.8",
+    "vite-plugin-istanbul": "^6.0.2"
   },
   "dependencies": {
     "preline": "^2.1.0",
