--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -60,8 +60,8 @@ jobs:
       id-token: write
     runs-on: ubuntu-latest
     environment:
-      name: production
-      url: https://pizza.spinnerserver.click
+      name: staging
+      url: https://stage-pizza.spinnerserver.click
     env:
       version: ${{needs.build.outputs.version}}
     steps:
@@ -79,8 +79,41 @@ jobs:
           path: dist/
 
       - name: Push to AWS S3
-        # Append the version to the path
         run: |
           echo Deploying $version
           aws s3 cp dist s3://${{ secrets.APP_BUCKET }}/$version --recursive
           # Remove this line -> aws cloudfront create-invalidation --distribution-id ${{ secrets.DISTRIBUTION_ID }} --paths "/*"
+
+      - name: Update staging version
+        run: |
+          # Get the current distribution and update it to use the new version
+          aws cloudfront get-distribution-config --id ${{ secrets.DISTRIBUTION_ID }} > original.json
+          etag=$(jq -r '.ETag' original.json)
+          jq '.DistributionConfig' original.json > request.json
+          jq --arg version "/$version" '.Origins.Items[0].OriginPath = $version' request.json > finalRequest.json
+          aws cloudfront update-distribution --id ${{ secrets.DISTRIBUTION_ID }} --if-match $etag --distribution-config file://finalRequest.json
+
+          # Wait for the distribution to deploy and then invalidate the cache
+          while [ "$(aws cloudfront get-distribution --id ${{ secrets.DISTRIBUTION_ID }} --query 'Distribution.Status' --output text)" != "Deployed" ]; do echo "Distribution is still updating..."; sleep 5; done
+          aws cloudfront create-invalidation --distribution-id ${{ secrets.DISTRIBUTION_ID }} --paths "/*"
+
+  release:
+    needs:
+      - build
+      - deploy
+    runs-on: ubuntu-latest
+    env:
+      version: ${{needs.build.outputs.version}}
+    steps:
+      - name: Create staging release
+        uses: ncipollo/release-action@v1
+        with:
+          tag: stage-version-${{ env.version }}
+          name: Staging ${{ env.version }}
+          generateReleaseNotes: true
+          body: |
+            ## Description
+
+            ${{ github.event.head_commit.message }}
+
+            **commit**: ${{ github.sha }}
